testsuite/tests/lexical_envs/invalid_add_env/test.out
test.py:12: error: There can be only one add_env action per EnvSpec
Done
